beautifying frontend adding framing etc

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Merriweather+Sans|Source+Serif+Pro" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Italianno|Srisakdi" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -17,7 +18,7 @@
       <button type="button" class="navbar-toggler  navbar-toggler-right" data-toggle="collapse" data-target="#myTogglerNav" aria-controls="#myTogglerNav" aria-expanded="false" aria-label="Toggle Navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><i class="fas fa-cube"></i>The Makeup Obsession</a>
+      <a class="navbar-brand" href="index.html"><i class="fas"></i><img src="images/nav_small.jpg">The Makeup Obsession</a>
      <section class="collapse navbar-collapse" id="myTogglerNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
@@ -35,7 +36,7 @@
           </li>
           <li class="nav-item"><a href="register.html" class="nav-link">Register</a></li>
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
         </ul>
     </section>
     </div>
@@ -131,12 +132,12 @@
           <div class= "container">
             <div class= "row justify-content-center">
               <div class="col-11 col-sm-10 col-md-8">
-              <h2 class = "page-section-title">THE MAKEUP OBSESSION</h2>
+              <h2 class = "page-section-title">The Makeup Obsession</h2>
               <p class = "page-section-text">Established in 2015. The Makeup Obsession is a team of skilled, experienced and passionate makeup and hair stylists 
                 offering services in all areas of the industry. Providing stunning hair and long-lasting makeup looks for all occasions  
-                in our studio located in Pokhara. Since opening their official studio in 2016, 
-                The Makeup Obsession also offers Bridal Makeup, Makeup for Modals for Photoshoots and Professional/Self Makeup Classes.</p>
-          <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#mymodalSchedule">Click here to find future date details</button>
+                in our studio located in Pokhara. After opening our official studio in 2016, 
+                The Makeup Obsession also offers Bridal Makeup, Makeup for Models for Photoshoots and Professional/Self Makeup Classes.</p>
+          <button type="button" class="btn btn-outline-success btn-sm" data-toggle="modal" data-target="#mymodalSchedule">Schedule Details</button>
           </div>
           <div class="modal" id="mymodalSchedule">
                 <div class ="modal-dialog">
@@ -148,8 +149,6 @@
                         <div class="model-body modal-section-text">
 
 								<section class="col col-lg-8">
-									<p>Message for Future Schedules</p>
-
 									<form:form>
 										<table class="table table-dark table-hover" id="t01"
 											border="2" width="100%" cellpadding="2">
@@ -177,7 +176,7 @@
           <div class="col-md-12 text-center">
               <h2 class="footer-title">Contact</h2>
               <div class="location">
-	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text location">: Nadipur Ward no. 3, Pokhara</span><br>
+	                <span> <i class="fas fa-map-marker-alt"></i></span><span class="text location">: Nadipur Ward no. 1, Pokhara</span><br>
 	                <a href="#"><i class="fas fa-phone text-light"> </i><span class="text location">: +977 9849865855</span></a><br>
                   <a href="#"><i class="fas fa-envelope text-light"> </i><span class="text location">: swikritee.shrestha@gmail.com</span></a>  
                   </div>
@@ -185,7 +184,8 @@
         </div>
         <div class="row">  
             <div class = "col-md-12 text-center"> 
-                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="#"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-facebook text-light align-items-center"><a href="https://www.facebook.com/makeupbyswiki/"> <i class="fa fa-facebook fa-lg"></i></a></span>
+                  <span class = "btn btn-social-icon btn-instagram text-light align-items-center"><a href="https://www.instagram.com/swikishrestha/?hl=en"><i class="fa fa-instagram fa-lg"></i></a></span>
                   <span class = "btn btn-social-icon btn-twitter text-light align-items-center"><a href="#"><i class="fa fa-twitter fa-lg"></i></a></span>      
             </div>
             </div>
